Bug 104863 - 186 assertions in piglit
Summary: 186 assertions in piglit
Status: RESOLVED FIXED
Alias: None
Product: Mesa
Classification: Unclassified
Component: Mesa core (show other bugs)
Version: git
Hardware: Other All
: medium normal
Assignee: Brian Paul
QA Contact: mesa-dev
URL:
Whiteboard:
Keywords: regression
Depends on:
Blocks:
 
Reported: 2018-01-30 17:05 UTC by Mark Janes
Modified: 2018-01-30 18:09 UTC (History)
2 users (show)

See Also:
i915 platform:
i915 features:


Attachments

Description Mark Janes 2018-01-30 17:05:30 UTC
186 tests assert on each i965 platform, eg:

piglit.spec.ext_framebuffer_multisample.formats 2

/tmp/build_root/m64/lib/piglit/bin/ext_framebuffer_multisample-formats 2 -auto -fbo
Using test set: Core formats
Testing GL_RGB

Standard Error

ext_framebuffer_multisample-formats: ../src/mesa/main/varray.c:1068: _mesa_enable_vertex_array_attrib: Assertion `attrib >= VERT_ATTRIB_GENERIC0' failed.


Triggered between Mesa bc5c54cadfe23905e33b43ecf29dab42026c58a5 and f892e332a8ea02a99da5b7c4d721bc838b12f33b

bisection underway.
Comment 1 Mark Janes 2018-01-30 17:16:00 UTC
4ab7e03e1fc7ac6c7cd3a5a1c160726f2a262e66 is the first bad commit
commit 4ab7e03e1fc7ac6c7cd3a5a1c160726f2a262e66
Author: Brian Paul <brianp@vmware.com>
Date:   Fri Jan 26 11:03:57 2018 -0700
    mesa: add an assertion in _mesa_enable_vertex_array_attrib()
    
    Some of the enable/disable vertex array functions take a zero-based
    generic index, while others take a VERT_ATTRIB_GENERIC0-based value.
    Add an assertion to clarify that in one place.
    
    Reviewed-by: Gert Wollny <gw.fossdev@gmail.com>
Comment 2 Brian Paul 2018-01-30 17:20:59 UTC
Patch posted to mesa-dev.  Please review and I'll push it.
Comment 3 Brian Paul 2018-01-30 18:09:00 UTC
Roland reviewed the patch.
Pushed as 1a9aa69ae85d7eb1baae1f2ee6af84d6fbd22de7


Use of freedesktop.org services, including Bugzilla, is subject to our Code of Conduct. How we collect and use information is described in our Privacy Policy.